# stracking

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  build.rst  genindex.html  guide.html  index.html  install.html  intro.html  main.py  main_detection.py  modules.html  objects.inv  py-modindex.html  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  stardist_stracking.html  stracking.html  tox.ini
.github/workflows/: sphinx.yml  test_and_deploy.yml
_sources/: guide.rst.txt  index.rst.txt  install.rst.txt  intro.rst.txt  quickstart.rst.txt  stardist_stracking.rst.txt
docs/source/: conf.py  guide.rst  modules.rst  quickstart.rst  stardist_stracking.rst  stracking.rst
examples/detectors/: README.rst  dog_detector_2d.py  doh_detector_2d.py  log_detector_2d.py
examples/features/: README.rst  length_features_2d.py
examples/jupyter_notebooks/: Test StarDist + Stracking.ipynb
examples/linkers/: README.rst  sp_linker.py
examples/properties/: intensity_properties.py
stracking/: __init__.py  _config.py  _distributor_init.py  setup.py
stracking/__check_build/: __init__.py  _check_build.c  setup.py
stracking/_build_utils/: __init__.py  min_dependencies.py  openmp_helpers.py  pre_build_helpers.py
stracking/cli/: __init__.py  detector_dog.py  detector_doh.py  detector_log.py  linker_shortest_path.py
stracking/containers/: __init__.py  _containers.py  containers.py  setup.py
stracking/data/: __init__.py  fake_traks1.tif
stracking/detectors/: __init__.py  _detector.py  _gaussian_detectors.py  (+1 more)
(+52 files in other folders)
