[metadata]
name = stracking
version = 0.1.5
author = Sylvain Prigent
author_email = meriadec.prigent@gmail.com
url = https://github.com/sylvainprigent/stracking
license = GPL-3.0-only
description = Implementation of particle tracking algorithms for 2D+t and 3D+t scientific data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: pytorch
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
python_requires = >=3.8

# add your package requirements here
install_requires =
    scipy>=1.6.3
    scikit-image>=0.18.1
    pandas>=1.2.4

[options.entry_points]
console_scripts =
    sdogdetector = stracking.cli.detector_dog:main
    slogdetector = stracking.cli.detector_log:main
    sdohdetector = stracking.cli.detector_doh:main
    ssplinker = stracking.cli.linker_shortest_path:main
